[MHV-68306] fixed long strings not wrapping issue with alert box. (#35704)

--- a/src/applications/mhv-medications/sass/medications.scss
+++ b/src/applications/mhv-medications/sass/medications.scss
@@ -373,6 +373,10 @@ va-checkbox {
   }
 }
 
+.tracking-alert {
+  flex-wrap: wrap;
+  word-wrap: break-word;
+}
 .tracking-info-med-list {
   list-style-type: disc;
 }
